Add unit tests for scrapeRecipe logic