@@ -1,5 +1,10 @@
 package family.themartinez.mealplanner.controllers.addrecipes;
 
+import static org.hamcrest.CoreMatchers.anyOf;
+import static org.hamcrest.CoreMatchers.containsString;
+import static org.hamcrest.CoreMatchers.is;
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertNull;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.ArgumentMatchers.any;
@@ -21,6 +26,7 @@ import family.themartinez.mealplanner.data.recipes.RecipeRepository;
 import family.themartinez.mealplanner.data.units.Unit;
 import family.themartinez.mealplanner.data.units.UnitRepository;
 import family.themartinez.mealplanner.scraper.ExternalRecipeScraper;
+import family.themartinez.mealplanner.scraper.ScrapedIngredient;
 import family.themartinez.mealplanner.scraper.ScrapedRecipe;
 import java.io.IOException;
 import java.nio.file.Files;
@@ -95,37 +101,75 @@ class AddRecipesControllerTest {
   }
 
   private void populateIngredientRepository() {
-    Ingredient milk = new Ingredient();
-    milk.setName("Whole milk");
-    Ingredient chicken = new Ingredient();
-    chicken.setName("Chicken breast, raw");
-    Ingredient water = new Ingredient();
-    water.setName("Water");
-    // TODO: Populate ingredientRepository with a lot more ingredients.
-    ingredientRepository.saveAll(List.of(milk, chicken, water));
+    ImmutableList<String> ingredientNames =
+        ImmutableList.of(
+            "whole milk",
+            "water",
+            "boneless skinless chicken breasts",
+            "eggs",
+            "garlic cloves",
+            "feta",
+            "frozen spinach",
+            "ground turkey",
+            "white mushrooms",
+            "shallots",
+            "fresh thyme",
+            "butter",
+            "extra-virgin olive oil",
+            "kosher salt",
+            "salt",
+            "black pepper",
+            "filet mignon steaks",
+            "beef tenderloins",
+            "prosciutto",
+            "dijon mustard",
+            "all purpose flour",
+            "puff pastry dough",
+            "coarse sea salt",
+            "fresh chives",
+            "fingerling potatoes",
+            "brandy",
+            "beef stock",
+            "cream",
+            "whole-grain mustard",
+            "green peppercorns",
+            "fresh rosemary",
+            "fresh sage",
+            "honey",
+            "balsamic vinegar",
+            "walnuts",
+            "pomegranate seeds",
+            "parmesan cheese");
+    ImmutableList.Builder<Ingredient> toAdd = ImmutableList.builder();
+    for (String ingredient : ingredientNames) {
+      Ingredient newIngredient = new Ingredient();
+      newIngredient.setName(ingredient);
+      toAdd.add(newIngredient);
+    }
+    ingredientRepository.saveAll(toAdd.build());
   }
 
   private void populateUnitRepository() {
-    Unit grams = new Unit();
-    grams.setName("grams");
-    Unit ounces = new Unit();
-    ounces.setName("ounces");
-    Unit pounds = new Unit();
-    pounds.setName("pounds");
-    Unit sprigs = new Unit();
-    sprigs.setName("sprigs");
-    Unit pints = new Unit();
-    pints.setName("pints");
-    Unit teaspoons = new Unit();
-    teaspoons.setName("teaspoons");
-    Unit tablespoons = new Unit();
-    tablespoons.setName("tablespoons");
-    Unit liters = new Unit();
-    liters.setName("liters");
-    Unit slices = new Unit();
-    slices.setName("slices");
-    unitRepository.saveAll(
-        List.of(grams, pounds, teaspoons, tablespoons, liters, slices, pints, sprigs, ounces));
+    ImmutableList.Builder<Unit> unitsToAdd = ImmutableList.builder();
+    ImmutableList<String> unitNames =
+        ImmutableList.of(
+            "liters",
+            "cups",
+            "slices",
+            "pints",
+            "grams",
+            "ounces",
+            "pounds",
+            "sprigs",
+            "teaspoons",
+            "tablespoons",
+            "whole");
+    for (String name : unitNames) {
+      Unit u = new Unit();
+      u.setName(name);
+      unitsToAdd.add(u);
+    }
+    unitRepository.saveAll(unitsToAdd.build());
   }
 
   @Test
@@ -280,15 +324,16 @@ class AddRecipesControllerTest {
     String html = result.getResponse().getContentAsString();
     Document doc = Jsoup.parse(html);
     Elements options = doc.getElementById("inputUnit").children();
-    assertEquals("grams", options.get(1).text());
-    assertEquals("liters", options.get(2).text());
-    assertEquals("ounces", options.get(3).text());
-    assertEquals("pints", options.get(4).text());
-    assertEquals("pounds", options.get(5).text());
-    assertEquals("slices", options.get(6).text());
-    assertEquals("sprigs", options.get(7).text());
-    assertEquals("tablespoons", options.get(8).text());
-    assertEquals("teaspoons", options.get(9).text());
+    assertEquals("cups", options.get(1).text());
+    assertEquals("grams", options.get(2).text());
+    assertEquals("liters", options.get(3).text());
+    assertEquals("ounces", options.get(4).text());
+    assertEquals("pints", options.get(5).text());
+    assertEquals("pounds", options.get(6).text());
+    assertEquals("slices", options.get(7).text());
+    assertEquals("sprigs", options.get(8).text());
+    assertEquals("tablespoons", options.get(9).text());
+    assertEquals("teaspoons", options.get(10).text());
   }
 
   @Test
@@ -297,15 +342,147 @@ class AddRecipesControllerTest {
     when(scraperMock.scrapeRecipe(any())).thenReturn(scrapedRecipe);
     MvcResult result =
         this.mockMvc
-            .perform(get("/scrapeRecipe").param("url", "https://www.recipes.com/cheeseburgers"))
+            .perform(get("/scrapeRecipe").param("url", "https://www.recipes.com/fetaburgers"))
             .andExpect(status().isOk())
             .andExpect(content().contentType(MediaType.APPLICATION_JSON))
             .andReturn();
     MockHttpServletResponse response = result.getResponse();
-    verify(scraperMock).scrapeRecipe("https://www.recipes.com/cheeseburgers");
-    // TODO: Finish writing tests.
+    verify(scraperMock).scrapeRecipe("https://www.recipes.com/fetaburgers");
 
+    List<ScrapedIngredient> ingredients = scrapedRecipe.getIngredients();
+    ScrapedIngredient eggs = ingredients.get(0);
+    assertEquals("2 eggs, beaten", eggs.getIngredientRaw());
+    assertNotNull(eggs.getIngredientParsed().getIngredientId());
+    assertEquals("eggs", eggs.getIngredientParsed().getName());
+    assertNotNull(eggs.getIngredientParsed().getUnitId());
+    assertEquals("whole", eggs.getIngredientParsed().getUnit());
+
+    ScrapedIngredient garlic = ingredients.get(1);
+    assertEquals("2 cloves garlic, minced", garlic.getIngredientRaw());
+    assertNotNull(garlic.getIngredientParsed().getIngredientId());
+    assertEquals("garlic cloves", garlic.getIngredientParsed().getName());
+    assertNull(garlic.getIngredientParsed().getUnitId()); // "clove" doesn't match anything in db
+    assertEquals("clove", garlic.getIngredientParsed().getUnit());
+
+    ScrapedIngredient feta = ingredients.get(2);
+    assertEquals("4 ounces feta cheese", feta.getIngredientRaw());
+    assertNotNull(feta.getIngredientParsed().getIngredientId());
+    assertEquals("feta", feta.getIngredientParsed().getName());
+    assertNotNull(feta.getIngredientParsed().getUnitId());
+    assertEquals("ounces", feta.getIngredientParsed().getUnit());
+
+    ScrapedIngredient frozenSpinach = ingredients.get(3);
+    assertEquals(
+        "1 (10 ounce) box frozen chopped spinach, thawed and squeezed dry",
+        frozenSpinach.getIngredientRaw());
+    // At least w/ this data set, it should find frozen spinach w/ a natural language lookup.
+    assertNotNull(frozenSpinach.getIngredientParsed().getIngredientId());
+    assertEquals("frozen spinach", frozenSpinach.getIngredientParsed().getName());
+    // unit is unclear "ounce vs. box", not found in DB, but original name "box" is preserved.
+    assertNull(frozenSpinach.getIngredientParsed().getUnitId());
+    assertEquals("box", frozenSpinach.getIngredientParsed().getUnit());
+
+    ScrapedIngredient groundTurkey = ingredients.get(4);
+    assertEquals("2 pounds ground turkey", groundTurkey.getIngredientRaw());
+    assertNotNull(groundTurkey.getIngredientParsed().getIngredientId());
+    assertEquals("ground turkey", groundTurkey.getIngredientParsed().getName());
+    assertNotNull(groundTurkey.getIngredientParsed().getUnitId());
+    assertEquals("pounds", groundTurkey.getIngredientParsed().getUnit());
   }
 
-  // TODO: Write more unit tests against scrapeRecipe logic.
+  @Test
+  public void scrapeRecipeShouldReturnResultsForComplexRecipe() throws Exception {
+    ScrapedRecipe scrapedRecipe = mapper.readValue(beefWellingtonJson, ScrapedRecipe.class);
+    when(scraperMock.scrapeRecipe(any())).thenReturn(scrapedRecipe);
+    MvcResult result =
+        this.mockMvc
+            .perform(get("/scrapeRecipe").param("url", "https://www.recipes.com/beefwellington"))
+            .andExpect(status().isOk())
+            .andExpect(content().contentType(MediaType.APPLICATION_JSON))
+            .andReturn();
+    MockHttpServletResponse response = result.getResponse();
+    verify(scraperMock).scrapeRecipe("https://www.recipes.com/beefwellington");
+
+    List<ScrapedIngredient> ingredients = scrapedRecipe.getIngredients();
+    ScrapedIngredient whiteMushrooms = ingredients.get(0);
+    assertEquals(
+        "3 pints (1 1/2 pounds) white button mushrooms", whiteMushrooms.getIngredientRaw());
+    assertNotNull(whiteMushrooms.getIngredientParsed().getIngredientId());
+    assertEquals("white mushrooms", whiteMushrooms.getIngredientParsed().getName());
+    assertNotNull(whiteMushrooms.getIngredientParsed().getUnitId());
+    assertEquals("pints", whiteMushrooms.getIngredientParsed().getUnit());
+
+    ScrapedIngredient choppedShallots = ingredients.get(1);
+    assertEquals("2 shallots, peeled and roughly chopped", choppedShallots.getIngredientRaw());
+    assertNotNull(choppedShallots.getIngredientParsed().getIngredientId());
+    assertEquals("shallots", choppedShallots.getIngredientParsed().getName());
+    assertNotNull(choppedShallots.getIngredientParsed().getUnitId());
+    assertEquals("whole", choppedShallots.getIngredientParsed().getUnit());
+
+    ScrapedIngredient freshThyme = ingredients.get(3);
+    assertEquals("2 sprigs fresh thyme, leaves only", freshThyme.getIngredientRaw());
+    assertNotNull(freshThyme.getIngredientParsed().getIngredientId());
+    assertEquals("fresh thyme", freshThyme.getIngredientParsed().getName());
+    assertNotNull(freshThyme.getIngredientParsed().getUnitId());
+    assertEquals("sprigs", freshThyme.getIngredientParsed().getUnit());
+
+    ScrapedIngredient unsaltedButter = ingredients.get(4);
+    assertEquals("2 tablespoons unsalted butter", unsaltedButter.getIngredientRaw());
+    assertNotNull(unsaltedButter.getIngredientParsed().getIngredientId());
+    assertEquals("butter", unsaltedButter.getIngredientParsed().getName());
+    assertNotNull(unsaltedButter.getIngredientParsed().getUnitId());
+    assertEquals("tablespoons", unsaltedButter.getIngredientParsed().getUnit());
+
+    ScrapedIngredient evoo = ingredients.get(5);
+    assertEquals("2 tablespoons extra-virgin olive oil", evoo.getIngredientRaw());
+    assertNotNull(evoo.getIngredientParsed().getIngredientId());
+    assertEquals("extra-virgin olive oil", evoo.getIngredientParsed().getName());
+    assertNotNull(evoo.getIngredientParsed().getUnitId());
+    assertEquals("tablespoons", evoo.getIngredientParsed().getUnit());
+
+    ScrapedIngredient saltAndPepper = ingredients.get(6);
+    assertEquals("Kosher salt and freshly ground black pepper", saltAndPepper.getIngredientRaw());
+    assertNotNull(saltAndPepper.getIngredientParsed().getIngredientId());
+    // This one confuses the natural language look up, it can find "kosher salt" or just "salt".
+    // As a heuristic, just make sure the result contains "salt".
+    assertThat(saltAndPepper.getIngredientParsed().getName(), containsString("salt"));
+    assertNotNull(saltAndPepper.getIngredientParsed().getUnitId());
+    assertEquals("whole", saltAndPepper.getIngredientParsed().getUnit());
+
+    ScrapedIngredient beefTenderloin = ingredients.get(7);
+    assertEquals(
+        "One 3-pound center cut beef tenderloin (filet mignon), trimmed",
+        beefTenderloin.getIngredientRaw());
+    assertNotNull(beefTenderloin.getIngredientParsed().getIngredientId());
+    // This one also can confuse natural language, beef tenderloins and filet mignon steaks are both
+    // valid results here.
+    assertThat(
+        beefTenderloin.getIngredientParsed().getName(),
+        anyOf(is("filet mignon steaks"), is("beef tenderloins")));
+    assertNotNull(beefTenderloin.getIngredientParsed().getUnitId());
+    assertEquals(3.0F, beefTenderloin.getIngredientParsed().getQuantity());
+    assertEquals("pounds", beefTenderloin.getIngredientParsed().getUnit());
+
+    ScrapedIngredient flourForPastry = ingredients.get(13);
+    assertEquals("Flour, for rolling out puff pastry", flourForPastry.getIngredientRaw());
+    assertNotNull(flourForPastry.getIngredientParsed().getIngredientId());
+    assertEquals("all purpose flour", flourForPastry.getIngredientParsed().getName());
+    assertNotNull(flourForPastry.getIngredientParsed().getUnitId());
+    assertEquals("whole", flourForPastry.getIngredientParsed().getUnit());
+
+    ScrapedIngredient chives = ingredients.get(17);
+    assertEquals("Minced chives, for garnish", chives.getIngredientRaw());
+    assertNotNull(chives.getIngredientParsed().getIngredientId());
+    assertEquals("fresh chives", chives.getIngredientParsed().getName());
+    assertNotNull(chives.getIngredientParsed().getUnitId());
+    assertEquals("whole", chives.getIngredientParsed().getUnit());
+
+    ScrapedIngredient grainyMustard = ingredients.get(28);
+    assertEquals("2 tablespoons grainy mustard", grainyMustard.getIngredientRaw());
+    assertNotNull(grainyMustard.getIngredientParsed().getIngredientId());
+    // This one is hard. Lookup can find anything like "dijon mustard" or "whole-grain mustard".
+    assertThat(grainyMustard.getIngredientParsed().getName(), containsString("mustard"));
+    assertNotNull(grainyMustard.getIngredientParsed().getUnitId());
+    assertEquals("tablespoons", grainyMustard.getIngredientParsed().getUnit());
+  }
 }
